adding fancy font

--- a/src/app/[locale]/_components/DifferentTabs/scss/_differentTabs.scss
+++ b/src/app/[locale]/_components/DifferentTabs/scss/_differentTabs.scss
@@ -63,7 +63,7 @@
 
       /* script-style main line */
       .ds-title-big {
-        font-family: var(--audrey-font-family, cursive);
+        font-family: var(--migratory-font-family, cursive);
         font-weight: 400;
         color: #ffdb9f;
         font-size: clamp(28px, 5vw, 56px);
