--- a/src/app/[locale]/_components/Header/scss/_header.scss
+++ b/src/app/[locale]/_components/Header/scss/_header.scss
@@ -32,7 +32,7 @@
       @include adjust-font(14px, false);
       // letter-spacing: 2px;
       font-weight: 500;
-      font-family: var(--audrey-font-family);
+      font-family: var(--migratory-font-family);
       position: relative;
 
       // commenting to prevent hovering on responsive (tablet & mobile)
