--- a/src/app/[locale]/_components/SignatureCollection/_signatureCollection.scss
+++ b/src/app/[locale]/_components/SignatureCollection/_signatureCollection.scss
@@ -19,7 +19,7 @@
   font-weight: 400;
 }
 .signatureSection .sig-title1 {
-  font-family: var(--audrey-font-family, cursive);
+  font-family: var(--migratory-font-family, cursive);
   color: var(--gold);
   font-size: clamp(28px, 4.6vw, 56px);
 }
