--- a/src/app/[locale]/_homepageComponents/AccordionSection/_accordionSection.scss
+++ b/src/app/[locale]/_homepageComponents/AccordionSection/_accordionSection.scss
@@ -20,7 +20,7 @@
 
     .title2 {
       font-size: 36px;
-      font-family: var(--audrey-font-family, cursive);
+      font-family: var(--migratory-font-family, cursive);
       font-weight: 400;
       color: var(--Gold-lux, #ffde9b);
       margin: 10px 0 0;
