--- a/src/app/[locale]/_homepageComponents/BlogsSection/_blogSection.scss
+++ b/src/app/[locale]/_homepageComponents/BlogsSection/_blogSection.scss
@@ -13,13 +13,13 @@
       text-align: center;
 
       h2.mainHeading {
-        font-family: var(--audrey-font-family, inherit);
+        font-family: var(--migratory-font-family, inherit);
       }
       h3.mainHeading {
         margin-top: 10px;
         margin-bottom: 40px;
         -webkit-text-fill-color: #fdfdfd;
-        font-family: var(--audrey-font-family, inherit);
+        font-family: var(--migratory-font-family, inherit);
       }
     }
 
