--- a/src/app/[locale]/_homepageComponents/OurStory/_ourStory.scss
+++ b/src/app/[locale]/_homepageComponents/OurStory/_ourStory.scss
@@ -444,7 +444,7 @@
 
           h2 {
             @include adjust-font(20px, false);
-            font-family: var(--audrey-font-family);
+            font-family: var(--migratory-font-family);
             color: var(--text-color);
             font-weight: 400;
           }
