--- a/src/app/[locale]/areas-and-communities/_areasAndCommunities.scss
+++ b/src/app/[locale]/areas-and-communities/_areasAndCommunities.scss
@@ -14,7 +14,7 @@
     .title {
       color: #fff;
       text-align: center;
-      font-family: var(--audrey-font-family);
+      font-family: var(--migratory-font-family);
       @include adjust-font(30px, false);
       font-style: normal;
       font-weight: 400;
