--- a/src/app/[locale]/offplan/[emirateParam]/[cityParam]/property/[id]/_components/InvestSection/_investSection.scss
+++ b/src/app/[locale]/offplan/[emirateParam]/[cityParam]/property/[id]/_components/InvestSection/_investSection.scss
@@ -57,7 +57,7 @@
         .investSection_title {
           color: #fff;
 
-          font-family: var(--audrey-font-family);
+          font-family: var(--migratory-font-family);
           @include adjust-font(24px, false);
           font-style: normal;
           font-weight: 700;
