--- a/src/app/[locale]/_components/LanguageSwitcher/LanguageSwitcherMobile/_LanguageSwitcherMobile.scss
+++ b/src/app/[locale]/_components/LanguageSwitcher/LanguageSwitcherMobile/_LanguageSwitcherMobile.scss
@@ -32,7 +32,7 @@
       font-size: 12px;
       letter-spacing: 2px;
       font-weight: 500;
-      font-family: var(--audrey-font-family);
+      font-family: var(--migratory-font-family);
       text-transform: uppercase;
     }
   }
