--- a/src/app/[locale]/developers/[slug]/_developer.scss
+++ b/src/app/[locale]/developers/[slug]/_developer.scss
@@ -63,7 +63,7 @@
     .__title {
       color: #fff;
       text-align: center;
-      font-family: var(--audrey-font-family);
+      font-family: var(--migratory-font-family);
       @include adjust-font(30px, false);
       font-style: normal;
       font-weight: 400;
