--- a/src/app/[locale]/_components/SignatureCollection/_signatureCollection.scss
+++ b/src/app/[locale]/_components/SignatureCollection/_signatureCollection.scss
@@ -6,6 +6,7 @@
   padding: 40px 20px 64px; /* a bit tighter */
   text-align: center;
   margin-bottom: 8rem;
+  margin-top: 8rem;
 }
 
 /* Header */
